增加了自动标注创建任务页面的功能。增加了数据管理页面的功能。
